--- a/Access.io/Storyboards/Base.lproj/Main.storyboard
+++ b/Access.io/Storyboards/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--MainMenu-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="MainMenu" id="BYZ-38-t0r" customClass="MainMenuViewController" customModule="Access_io" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="mainMenuView" title="MainMenu" id="BYZ-38-t0r" customClass="MainMenuViewController" customModule="Access_io" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -183,7 +183,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tH7-re-MKm">
-                                <rect key="frame" x="0.0" y="622" width="414" height="240"/>
+                                <rect key="frame" x="0.0" y="607" width="414" height="156"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
@@ -199,7 +199,7 @@
                                 </prototypes>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Reviews:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p7C-M9-Emi">
-                                <rect key="frame" x="20" y="593" width="341" height="21"/>
+                                <rect key="frame" x="20" y="578" width="341" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -220,6 +220,17 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6xG-xW-tLL">
+                                <rect key="frame" x="160" y="832" width="94" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <state key="normal" title="Log out">
+                                    <color key="titleColor" red="0.73775276830000003" green="0.12827111350000001" blue="0.04517003118" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <connections>
+                                    <action selector="logoutButtonClicked:" destination="DQL-Cm-6Ly" eventType="touchUpInside" id="G8x-0Y-6Cp"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="k5i-hq-yFg"/>
@@ -227,6 +238,7 @@
                     <connections>
                         <outlet property="addReview" destination="cvp-Re-oCh" id="UuA-Ho-hts"/>
                         <outlet property="locationLabel" destination="Kus-Zu-fLM" id="nsz-Ic-ffY"/>
+                        <outlet property="logoutButton" destination="6xG-xW-tLL" id="PUQ-0M-6FL"/>
                         <outlet property="map" destination="Hts-ed-iNN" id="NOB-Ap-il5"/>
                         <outlet property="ratingLabel" destination="6GO-lI-8rd" id="DnH-pL-Cee"/>
                         <outlet property="reviewTable" destination="tH7-re-MKm" id="Kgh-WK-qlv"/>
